--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,9 @@ body {
   background-repeat: no-repeat;
   background-size: 50%;
   background-position: right 50%;
+  padding-bottom: 200px;
+  margin-bottom: 200px;
+
 }
 
 .peaks__inner {
@@ -298,6 +301,7 @@ body {
 .peaks__title {
   padding-top: 200px;
   margin-bottom: 100px;
+  text-align: left;
 }
 
 .peaks__inner p{
